优化邮箱注册登录代码